--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.sigpwned</groupId>
     <artifactId>args4j</artifactId>
-    <version>0.0.0-SNAPSHOT</version>
+    <version>0.0.0</version>
     <name>args4j</name>
     <inceptionYear>2024</inceptionYear>
     <description>Simple, Dependency-Free CLI Argument Parser for Java 8+</description>
